# bouncing-ball-prototypes

./: .gitignore  README.md
v001/: Ball.cpp  Ball.h  Game.cpp  Game.h  Untitled 1.ods  constants.h  main  main.cpp  output
v002/: Game.cpp  constants.h  main
v003/: Game.cpp  Makefile
v004/: Game.cpp  Makefile  rendering.cpp
v005/: CMakeLists.txt  Game.h  main.cpp  rendering.h
v006/: Ball.cpp  Ball.h  Game.cpp  Game.h  Makefile  Paddle.cpp  Paddle.h  constants.h  main.cpp
v007/: Ball.cpp  Ball.h  Game.cpp
v008/: .clang-format  Ball.cpp  Ball.h  Game.cpp  Game.h  Makefile  defer.h  main.cpp  ui.cpp  ui.h
v009/: main.cpp
v010/: FileReader.c  FileReader.h  Makefile  ball.config  main.cpp  string_utils.c  string_utils.h
